: Please enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utility.css">
-    <title>Spotify - Web Player: Music for everyone</title>
+    <title>Joyify - Music for everyone</title>
 </head>
 
 <body>
@@ -16,12 +16,17 @@
                 <img width="30" class="invert" src="img/close.svg" alt="">
             </div>
             <div class="home bg-grey rounded m-1 p-1">
-                <div class="logo"><img width="110" class="invert" src="img/logo.svg" alt=""></div>
+                <div class="logo"><img width="35" class="invert" src="/Logo(Joyify)/Logo(Joyify).png" alt="">
+                  <h2>
+                    Joyify
+                  </h2>
+                
+                </div>
                 <ul>
                     <li><img class="invert" src="img/home.svg" alt="home">Home</li>
                     <li><img class="invert" src="img/search.svg" alt="home">Search</li>
                 </ul>
-            </div>
+            </div>  
 
             <div class="library bg-grey rounded m-1 p-1">
                 <div class="heading ">
@@ -75,7 +80,7 @@
                 </div>
             </div>
             <div class="spotifyPlaylists">
-                <h1>Spotify Playlists</h1>
+                <h1>Joyify Playlists</h1>
                 <div class="cardContainer">
                     
                         <div class="card">
